--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
             // 先清空內容
             document.getElementById("table").innerHTML = "";
-            let content = "<table><thead><th>Feeling</th><th>Name</th><th>Message</th></thead><tbody>";
+            let content = "<table><thead><th>feeling</th><th>name</th><th>message</th></thead><tbody>";
 
             // header 不需要繪製，所以 shift 掉
             formData.shift();
