--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <script>
         // 放入你部署後產生的 網頁應用程式網址
-        const scriptURL = "https://script.google.com/macros/s/AKfycbz6NEv22niq31Ri0FXC1LA9X7_xKhV21_euYlmyzbLdfgLHrZY46D499a0Ujs_OAdMH/exec"
+        const scriptURL = ""
 
         // READ
         document.forms['read'].addEventListener('submit', e => {
